--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://vincenzo95vt.github.io/SocialWeb-FavLists",
   "name": "socialweb-favlists",
   "private": true,
   "version": "0.0.0",
